# roboy_darkroom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
darkroom/: .gitmodules  CMakeLists.txt  ImuModelPlugin.xml  LighthouseVisualPlugin.xml  darkroom.xml  package.xml  vive_intrinsics.xml
darkroom/calibrated_objects/: CalibrationObject.yaml  calibration.yaml  calibrationCube.yaml  nerfgun.yaml  protoType3.yaml  protoType4.yaml  protoType5.yaml  sphereTracker18cm.yaml
darkroom/calibrated_objects/models/: calibrationCube.stl  calibrationObject.stl  nerfgun.dae  nerfgun.stl
darkroom/cmake/: FindALGLIB.cmake
darkroom/include/darkroom/: DarkRoom.hpp  InYourGibbousPhase.hpp  InYourGibbousPhase2.hpp  InYourGibbousPhase3.hpp  InYourGibbousPhase4.hpp  LighthouseEstimator.cuh  LighthouseEstimator.hpp  LighthouseSimulator.hpp  ParticleFilter.hpp  PoseEstimatorMultiLighthouse.hpp  PoseEstimatorSensorCloud.hpp  PoseEstimatorSensorDistance.hpp  PoseEstimatorSensorDistances.hpp  Sensor.hpp  TrackedObject.hpp  TrackedObjectDelegate.hpp  Transform.hpp  Triangulation.hpp  Utilities.hpp
darkroom/include/darkroom/gazebo/: DarkRoomVisualPlugin.hpp  ImuModelPlugin.hpp  LighthouseVisualPlugin.hpp
darkroom/launch/: CalibrationCube.launch  HTCLightHouseSystem.launch  darkroom.launch  ekf_template.launch  reconstructor.launch  server_vr.launch
darkroom/params/: ekf_parameters.yaml  lighthouse_calibration.yaml  lighthouse_calibration_backup.yaml
darkroom/protobuf/: lighthouse.options  lighthouse.proto
darkroom/records/TPE_calibrated/: rotX_uncalibratedComparison.tex  rotY_uncalibratedComparison.tex  rotZ_uncalibratedComparison.tex
darkroom/records/calibrated/twoLighthouses/: XYZ_calibrated.fig  rotX_uncalibratedComparison.tex  rotY_calibratedComparison.tex  rotZ_calibratedComparison.tex
darkroom/records/calibrated/twoLighthousesVelocity/: x_calibratedComparisonPositionError.tex  x_calibratedComparisonVelocity.tex  x_calibratedComparisonXY.tex  y_calibratedComparisonPositionError.tex  y_calibratedComparisonVelocity.tex  y_calibratedComparisonXY.tex  z_calibratedComparisonPositionError.tex  z_calibratedComparisonVelocity.tex  z_calibratedComparisonXZ.tex
darkroom/records/oneLighthouse/: rotX_MLPEComparison.tex  rotY_MLPEComparison.tex  rotZ_MLPEComparison.tex
darkroom/records/separate/MLPE_calibrated/: rotX_uncalibratedComparison.tex  rotY_uncalibratedComparison.tex  rotZ_uncalibratedComparison.tex
darkroom/records/twoLighthouses/: directComparisonXY.tex  directComparisonXZ.tex  directComparisonZY.tex
darkroom/records/uncalibrated/: XYZ_uncalibrated.fig  rotX_uncalibratedComparison.tex  rotY_uncalibratedComparison.tex  rotZ_uncalibratedComparison.tex
darkroom/scripts/: compareToSteamVR.m  compareToSteamVRvelocity.m  multi_lighthouse_pose_estimator.m  optical_model_lighthouses.m  tracker_publisher.py
darkroom/scripts/calibration/: applyCalibrationModel.m  calculateLighthouseAngles.m  calibration.m  createRTfrom.m  plotCoordinateFrame.m  plotLighthouseSensors.m  poseMultiLighthouse.m
darkroom/src/: DarkRoom.cpp  InYourGibbousPhase.cpp  InYourGibbousPhase2.cpp  InYourGibbousPhase3.cpp  InYourGibbousPhase4.cpp  LighthouseEstimator.cpp  LighthouseEstimator.cu  LighthouseSimulator.cpp  ParticleFilter.cpp  PoseEstimatorMultiLighthouse.cpp  PoseEstimatorSensorCloud.cpp  PoseEstimatorSensorDistance.cpp  PoseEstimatorSensorDistances.cpp  Sensor.cpp  TrackedObject.cpp  TrackedObjectDelegate.cpp  Transform.cpp  Triangulation.cpp  Utilities.cpp  publishOpenVRPoses.cpp  testMe.cpp  testSVD.cu
darkroom/src/gazebo/: DarkRoomVisualPlugin.cpp  ImuModelPlugin.cpp  LighthouseVisualPlugin.cpp
darkroom/worlds/: DarkRoom.world
darkroom_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
darkroom_rqt/include/darkroom_rqt/: darkroom_rqt.hpp
darkroom_rqt/qcustomplot/: qcustomplot.cpp  qcustomplot.h
darkroom_rqt/resources/: trackedObject.qml  webview.qml
darkroom_rqt/rqt_perspectives/: DarkRoom.perspective
darkroom_rqt/src/: darkroom_rqt.cpp  darkroom_rqt.ui  main.cpp
fpga/: CMakeLists.txt  package.xml
fpga/arm/lib/arm-linux-gnueabihf/: libiw.so.30  libply-boot-client.so.4.0.0  libply-splash-core.so.4.0.0  libply-splash-graphics.so.4.0.0  libply.so.4.0.0  libprocps.so.4.0.0  libuuid.so.1.3.0
fpga/arm/usr/include/: dlg_config.h  hwloc.h  ldap.h  ldap_features.h  mpi  numpy  openmpi  xf86drm.h
fpga/arm/usr/include/EGL/: eglplatform.h
fpga/arm/usr/include/Poco/: Platform.h  String.h
fpga/arm/usr/include/apr-1.0/: apr.h
fpga/arm/usr/include/arm-linux-gnueabihf/: expat_config.h  gmp.h
fpga/arm/usr/include/harfbuzz/: hb-gobject-enums.h  hb-version.h
fpga/arm/usr/include/hwloc/: rename.h
fpga/arm/usr/include/infiniband/: verbs.h
fpga/arm/usr/include/linux/: version.h
fpga/arm/usr/include/nettle/: nettle-stdint.h
fpga/arm/usr/lib/: libPocoCrypto.so.9  libPocoData.so.9  libPocoFoundation.so.9  libPocoMySQL.so.9  libPocoNet.so.9  libPocoNetSSL.so.9  libPocoODBC.so.9  libPocoSQLite.so.9  libPocoUtil.so.9  libPocoXML.so.9  libPocoZip.so.9  libblas.so.3  libgda-5.0.so.4  libgda-5.0.so.4.1.1  libgda-report-5.0.so.4  libgda-report-5.0.so.4.1.1  libgda-xslt-5.0.so.4  libgda-xslt-5.0.so.4.1.1  libibverbs.so.1  libibverbs.so.1.0.0  libid3tag.so.0.3.0  libkeybinder.so.0  libkeybinder.so.0.1.0  liblapack.so.3  libmca_common_sm.so.4  libmca_common_sm.so.4.0.4  libmca_common_verbs.so.7  libmca_common_verbs.so.7.0.0  libmpi.so.12  libmpi.so.12.0.2  libmpi_cxx.so.1.1.3  libmpi_mpifh.so.12.0.0  libmpi_usempi_ignore_tkr.so.6.1.0  libmpi_usempif08.so.11  libmpi_usempif08.so.11.1.0  libmusicbrainz3.so.6.2.0  libompitrace.so.0.0.0  libopen-pal.so.13.0.2  libopen-rte.so.12.0.2  libvorbisidec.so.1.0.3  (+1 more)
fpga/arm/usr/lib/NetworkManager/: ifblacklist_migrate.sh  nm-dhcp-helper  nm-dispatcher  nm-iface-helper
fpga/arm/usr/lib/apt/: apt-helper
fpga/arm/usr/lib/arm-linux-gnueabihf/: libFLAC.so.8.3.0  libICE.so.6.3.0  libImlib2.so.1.4.7  libOpenCL.so.1.0.0  libQt5Core.prl  (+496 more)
fpga/cmake/: findros.cmake
fpga/include/darkroom_fpga/: DarkRoom.hpp  hps_0.h
fpga/src/: DarkRoom.cpp  main.cpp
(+887 files in other folders)
