<?xml version="1.0"?>
<package format="2">
    <name>darkroom</name>
    <version>0.0.0</version>
    <description>The darkroom package for HTC vive lighthouse tracking</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>rviz</depend>
    <depend>visualization_msgs</depend>
    <depend>tf</depend>
    <depend>pluginlib</depend>
    <depend>roboy_communication_middleware</depend>
    <depend>common_utilities</depend>
    <depend>message_runtime</depend>
    <depend>robot_localization</depend>
    <depend>xmlrpcpp</depend>
    <depend>gazebo</depend>
    <depend>pcl_ros</depend>

    <export>
        <rviz plugin="${prefix}/darkroom.xml"/>
        <darkroom plugin="${prefix}/LighthouseVisualPlugin.xml"/>
    </export>
</package>
